# tabular-time-series

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: publish.yml
tabular_time_series/: __init__.py  tsdf.py  tsgen.py  tsgenerator.py  tsgeneratoronline.py
tests/: test_tabular_time_series.py
