[tool.poetry]
name = "tabular-time-series"
version = "0.1.0"
description = ""
authors = ["Felipe Whitaker <felipewhitaker@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = {version = "^1.3.2", optional = true}
numpy = {version = "^1.21.2", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
