[tool.poetry]
name = "tabular-time-series"
version = "0.2.3"
description = ""
authors = ["Felipe Whitaker <felipewhitaker@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/felipewhitaker/tabular-time-series"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.2"
pre-commit = "^2.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
